--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "@types/node": "^16.18.59",
     "@types/react": "^18.2.32",
     "@types/react-dom": "^18.2.14",
-    "blink-hub": "^0.1.3",
+    "blink-hub": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
