--- a/package.json
+++ b/package.json
@@ -10,18 +10,21 @@
     "@types/node": "^16.18.59",
     "@types/react": "^18.2.32",
     "@types/react-dom": "^18.2.14",
-    "blink-hub": "^0.3.1",
+    "autoprefixer": "^10.4.16",
+    "blink-hub": "^0.3.2",
+    "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.18.0",
     "react-scripts": "^5.0.1",
-    "typescript": "^5.2.2",
-    "web-vitals": "^2.1.4"
+    "tailwindcss": "^3.3.5",
+    "typescript": "^5.2.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
     "extends": [
@@ -40,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-app-rewired": "^2.2.1"
   }
 }
